--- a/package.json
+++ b/package.json
@@ -10,12 +10,13 @@
     "lint": "eslint ."
   },
   "dependencies": {
-    "modalbox": "^1.0.0",
+    "random-string": "^0.2.0",
     "react": "16.9.0",
     "react-native": "^0.61.5",
     "react-native-geolocation-service": "^3.1.0",
     "react-native-gesture-handler": "^1.5.3",
     "react-native-maps": "0.26.1",
+    "react-native-modalbox": "^2.0.0",
     "react-native-reanimated": "^1.4.0",
     "react-native-screens": "^1.0.0-alpha.23",
     "react-native-vector-icons": "^6.6.0",
