--- a/ios/Podfile
+++ b/ios/Podfile
@@ -39,6 +39,8 @@ target 'doogether' do
 
   pod 'RNVectorIcons', :path => '../node_modules/react-native-vector-icons'
 
+  pod 'RNCAsyncStorage', :path => '../node_modules/@react-native-community/async-storage'
+
   target 'doogetherTests' do
     inherit! :search_paths
     # Pods for testing
