--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
     "lint": "eslint ."
   },
   "dependencies": {
+    "@react-native-community/async-storage": "^1.7.1",
+    "@react-native-community/checkbox": "^0.2.2",
     "random-string": "^0.2.0",
     "react": "16.9.0",
     "react-native": "^0.61.5",
